# equity-analysis-skills

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILLS_CHANGELOG.md  bear-case.md  business-overview.md  decision-journal.md  earnings-update.md  edgar-filings.md  financial-deep-dive.md  industry-scan.md  management-review.md  moat-analysis.md  process.md  valuation-check.md
.githooks/: post-checkout
_benchmarks/: CLAUDE.md  CODEX.md  README.md  template.md
scripts/: install-codex-skill.sh  install-git-hooks.sh
scripts/edgar/: README.md  pyproject.toml
scripts/edgar/edgar_filings/: __init__.py  cli.py
scripts/skill-template/: SKILL.md
